support MME eval

--- a/chartmoe/eval_MME.ipynb
+++ b/chartmoe/eval_MME.ipynb
@@ -12,7 +12,31 @@
       "/data/FinAi_Mapping_Knowledge/qiyiyan/qbw/anaconda3/envs/intern_clean/lib/python3.9/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n",
       "/data/FinAi_Mapping_Knowledge/qiyiyan/qbw/anaconda3/envs/intern_clean/lib/python3.9/site-packages/huggingface_hub/file_download.py:1132: FutureWarning: `resume_download` is deprecated and will be removed in version 1.0.0. Downloads always resume when possible. If you want to force a new download, use `force_download=True`.\n",
-      "  warnings.warn(\n"
+      "  warnings.warn(\n",
+      "A new version of the following files was downloaded from https://huggingface.co/IDEA-FinAI/chartmoe:\n",
+      "- tokenization_internlm_xcomposer2.py\n",
+      ". Make sure to double-check they do not contain any added malicious code. To avoid downloading new versions of the code file, you can pin a revision.\n",
+      "A new version of the following files was downloaded from https://huggingface.co/IDEA-FinAI/chartmoe:\n",
+      "- configuration_chartmoe.py\n",
+      ". Make sure to double-check they do not contain any added malicious code. To avoid downloading new versions of the code file, you can pin a revision.\n",
+      "A new version of the following files was downloaded from https://huggingface.co/IDEA-FinAI/chartmoe:\n",
+      "- build_mlp.py\n",
+      ". Make sure to double-check they do not contain any added malicious code. To avoid downloading new versions of the code file, you can pin a revision.\n",
+      "A new version of the following files was downloaded from https://huggingface.co/IDEA-FinAI/chartmoe:\n",
+      "- modeling_internlm2.py\n",
+      "- build_mlp.py\n",
+      ". Make sure to double-check they do not contain any added malicious code. To avoid downloading new versions of the code file, you can pin a revision.\n",
+      "A new version of the following files was downloaded from https://huggingface.co/IDEA-FinAI/chartmoe:\n",
+      "- build_moe_connector.py\n",
+      ". Make sure to double-check they do not contain any added malicious code. To avoid downloading new versions of the code file, you can pin a revision.\n",
+      "A new version of the following files was downloaded from https://huggingface.co/IDEA-FinAI/chartmoe:\n",
+      "- modeling_chartmoe.py\n",
+      "- modeling_internlm2.py\n",
+      "- build_moe_connector.py\n",
+      ". Make sure to double-check they do not contain any added malicious code. To avoid downloading new versions of the code file, you can pin a revision.\n",
+      "/data/FinAi_Mapping_Knowledge/qiyiyan/qbw/anaconda3/envs/intern_clean/lib/python3.9/site-packages/huggingface_hub/file_download.py:1132: FutureWarning: `resume_download` is deprecated and will be removed in version 1.0.0. Downloads always resume when possible. If you want to force a new download, use `force_download=True`.\n",
+      "  warnings.warn(\n",
+      "Downloading shards: 100%|██████████| 2/2 [00:00<00:00,  4.23it/s]\n"
      ]
     },
     {
@@ -26,9 +50,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/data/FinAi_Mapping_Knowledge/qiyiyan/qbw/anaconda3/envs/intern_clean/lib/python3.9/site-packages/huggingface_hub/file_download.py:1132: FutureWarning: `resume_download` is deprecated and will be removed in version 1.0.0. Downloads always resume when possible. If you want to force a new download, use `force_download=True`.\n",
-      "  warnings.warn(\n",
-      "Loading checkpoint shards: 100%|██████████| 2/2 [00:10<00:00,  5.42s/it]\n"
+      "Loading checkpoint shards: 100%|██████████| 2/2 [00:08<00:00,  4.16s/it]\n"
      ]
     }
    ],
@@ -48,7 +70,8 @@
     "from datasets import load_dataset\n",
     "from chartmoe import ChartMoE_Robot\n",
     "\n",
-    "mme_data = load_dataset(\"lmms-lab/MME\")['test']\n",
+    "# mme_data = load_dataset(\"lmms-lab/MME\")['test']\n",
+    "mme_data = load_dataset(\"/data/FinAi_Mapping_Knowledge/qiyiyan/qbw/cache/MME\")['test']\n",
     "\n",
     "robot = ChartMoE_Robot()"
    ]
@@ -122,7 +145,7 @@
      "text": [
       "  0%|          | 0/2374 [00:00<?, ?it/s]/data/FinAi_Mapping_Knowledge/qiyiyan/qbw/anaconda3/envs/intern_clean/lib/python3.9/site-packages/transformers/generation/utils.py:1417: UserWarning: You have modified the pretrained model configuration to control generation. This is a deprecated strategy to control generation and will be removed soon, in a future version. Please use a generation configuration file (see https://huggingface.co/docs/transformers/main_classes/text_generation )\n",
       "  warnings.warn(\n",
-      "100%|██████████| 2374/2374 [55:47<00:00,  1.41s/it] \n"
+      "100%|██████████| 2374/2374 [58:05<00:00,  1.47s/it]\n"
      ]
     }
    ],
@@ -139,8 +162,8 @@
     "            image=image,\n",
     "            question=question,\n",
     "            temperature=1.0,\n",
-    "            max_new_tokens=500,\n",
-    "            num_beams=3,\n",
+    "            max_new_tokens=5,\n",
+    "            num_beams=5,\n",
     "            do_sample=False,\n",
     "            repetition_penalty=1.0\n",
     "        )\n",
@@ -161,14 +184,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2214.1502601040415\n"
+      "2214.1313525410164\n"
      ]
     }
    ],
@@ -199,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -207,21 +230,21 @@
       "text/plain": [
        "{'code_reasoning': 117.5,\n",
        " 'artwork': 186.25,\n",
-       " 'celebrity': 163.23529411764707,\n",
+       " 'celebrity': 163.8235294117647,\n",
        " 'numerical_calculation': 147.5,\n",
        " 'text_translation': 155.0,\n",
        " 'count': 170.0,\n",
-       " 'color': 170.0,\n",
-       " 'commonsense_reasoning': 138.57142857142858,\n",
+       " 'color': 165.0,\n",
+       " 'commonsense_reasoning': 140.71428571428572,\n",
        " 'position': 158.33333333333334,\n",
        " 'OCR': 125.0,\n",
-       " 'landmark': 170.25,\n",
-       " 'scene': 157.0,\n",
+       " 'landmark': 172.0,\n",
+       " 'scene': 157.5,\n",
        " 'existence': 180.0,\n",
        " 'posters': 175.51020408163265}"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -232,17 +255,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "defaultdict(int,\n",
-       "            {'Perception': 1655.578831532613, 'Cognition': 558.5714285714286})"
+       "            {'Perception': 1653.4170668267307, 'Cognition': 560.7142857142858})"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,22 +280,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2214.2"
+       "2214.1000000000004"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "1655.6 + 558.6"
+    "1653.4 + 560.7"
    ]
   },
   {
