support MME eval

--- a/chartmoe/eval_MME.ipynb
+++ b/chartmoe/eval_MME.ipynb
@@ -70,8 +70,7 @@
     "from datasets import load_dataset\n",
     "from chartmoe import ChartMoE_Robot\n",
     "\n",
-    "# mme_data = load_dataset(\"lmms-lab/MME\")['test']\n",
-    "mme_data = load_dataset(\"/data/FinAi_Mapping_Knowledge/qiyiyan/qbw/cache/MME\")['test']\n",
+    "mme_data = load_dataset(\"lmms-lab/MME\")['test']\n",
     "\n",
     "robot = ChartMoE_Robot()"
    ]
