support mathvista eval

--- a/chartmoe/eval_MathVista.ipynb
+++ b/chartmoe/eval_MathVista.ipynb
@@ -51,8 +51,7 @@
     "import openai\n",
     "openai.api_key='sk-8Aw874e32e26fae570bed156b309d5841fc1103ae40PobiF'\n",
     "\n",
-    "# dataset = load_dataset(\"AI4Math/MathVista\")\n",
-    "dataset = load_dataset(\"/data/FinAi_Mapping_Knowledge/qiyiyan/qbw/cache/MathVista\")\n",
+    "dataset = load_dataset(\"AI4Math/MathVista\")\n",
     "\n",
     "robot = ChartMoE_Robot()"
    ]
